[project]
name = "avaScenarioModelChain"
description = "Avalanche Model Chain workflow (Preprocessing and PRA/Avalanche simulation pipeline)"
requires-python = ">=3.9,<3.12"

# ----------------------------------------------------------------------
# Core Python dependencies
# ----------------------------------------------------------------------
dependencies = [
    "numpy",
    "matplotlib",
    "shapely",
    "ConfigUpdater",
    "numba",
    "whitebox",
    "pyarrow",
    "tqdm",
]

# ----------------------------------------------------------------------
# Pixi PROJECT configuration
# ----------------------------------------------------------------------
[tool.pixi.project]
channels  = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64", "win-64", "osx-64"]

# ----------------------------------------------------------------------
# GDAL/Fiona/Rasterio/PROJ stack
# ----------------------------------------------------------------------
[tool.pixi.dependencies]
python   = "3.11.*"
proj     = "9.5.*"
gdal     = "3.10.*"
fiona    = "1.10.*"
rasterio = "1.4.*"
pyproj   = "3.7.*"
pyarrow  = "*"

# ----------------------------------------------------------------------
# Task entrypoint
# ----------------------------------------------------------------------
[tool.pixi.tasks]
modelchain = { cmd = "python runAvaScenModelChain.py", cwd = "." }

# ----------------------------------------------------------------------
# Environments
# ----------------------------------------------------------------------
[tool.pixi.environments]
dev = { features = ["dev"] }

# ----------------------------------------------------------------------
# Environment variables for GDAL/Numba
# ----------------------------------------------------------------------
[tool.pixi.activation.env]
NUMBA_CAPTURED_ERRORS        = "new_style"
CPL_LOG                      = "/dev/null"
GDAL_PAM_ENABLED             = "NO"
GDAL_DISABLE_READDIR_ON_OPEN = "EMPTY_DIR"

# ----------------------------------------------------------------------
# LOCAL AvaFrame REQUIRED for this workflow
# This points to:
#   <repo_root>/../AvaFrame
# which works for Bitbucket dev AND GitHub clones.
# ----------------------------------------------------------------------
[tool.pixi.feature.dev.pypi-dependencies]
avaframe = { path = "../../AvaFrame", editable = true }

