[project]
name = "ati"
description = "Avalanche Model Chain workflow (Preprocessing and PRA/Avalanche simulation pipeline)"
requires-python = ">=3.9,<3.12"

# ----------------------------------------------------------------------
# Core Python dependencies
# ----------------------------------------------------------------------
dependencies = [
    "numpy<2.0",
    "matplotlib",
    "shapely",
    "ConfigUpdater",
    "numba",
    "whitebox",
    "pyarrow",
    "tqdm",
    "scikit-image",
    "pandas",
    "fiona",

]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
# ----------------------------------------------------------------------
# Pixi PROJECT configuration
# ----------------------------------------------------------------------
[tool.pixi.project]
channels  = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64", "win-64", "osx-64"]

# ----------------------------------------------------------------------
# GDAL/Fiona/Rasterio/PROJ stack
# ----------------------------------------------------------------------
[tool.pixi.dependencies]
python = ">=3.9,<3.14"
proj     = "9.5.*"
gdal     = "3.10.*"
pyproj   = "3.7.*"
pyarrow  = "*"
numpy = "<2.0"
black = "*"
rasterio = "*"

# ----------------------------------------------------------------------
# Task entrypoint
# ----------------------------------------------------------------------
[tool.pixi.tasks]
avascen = { cmd = "python workflows/runAvaScenModelChain.py", cwd = "." }
avadirectory = { cmd = "python workflows/runAvaDirectory.py", cwd = "." }

[tool.pixi.feature.dev.dependencies]
pytest = "*"


# dev environment: editable cloned AvaFrame repo
[tool.pixi.feature.dev.pypi-dependencies]
avaframe = { path = "../../AvaFrame", editable = true }

# default environment: pypi AvaFrame
[tool.pixi.feature.prod.pypi-dependencies]
avaframe = "*"

[tool.black]
line-length = 109

# ----------------------------------------------------------------------
# Environment variables for GDAL/Numba
# ----------------------------------------------------------------------
[tool.pixi.activation.env]
PYTHONPATH = "${PIXI_PROJECT_ROOT}"
NUMBA_CAPTURED_ERRORS        = "new_style"
CPL_LOG                      = "/dev/null"
GDAL_PAM_ENABLED             = "NO"
GDAL_DISABLE_READDIR_ON_OPEN = "EMPTY_DIR"

# Environments
# ----------------------------------------------------------------------
[tool.pixi.environments]
default = { features = ["prod"], solve-group = "default" }
prod = ["prod"]
dev = ["dev"]
